Sat Aug 26 03:11:01 UTC 2006  Krishnakumar B  <kitty@spam.invalid.domain>

        * docs/svn/svn-prefs.reg:
        * docs/svn/config:

          Updates to add even more file types.

Sat Aug 26 02:32:18 UTC 2006  Krishnakumar B  <kitty@spam.invalid.domain>

        * docs/svn/svn-prefs.reg:
        * docs/svn/config:

          Updated these files to add more entries to the list of globally
          ignored extensions, and also to the list of file types which
          should have automatic properties set.  Also synced up the config and
          svn-prefs.reg file.

Fri Aug 25 22:01:38 UTC 2006  Steve Huston  <shuston@riverace.com>

        * ace/Sock_Connect.cpp (get_ip_interfaces, count_interfaces):
          Corrected to extract IPv6 information correctly from ioctl()-
          returned structures.

        * tests/Enum_Interfaces_Test.cpp: On error condition ACE_HAS_IPV6 but
          no ipv6 interfaces, do the log as LM_ERROR so the scoreboard picks
          it up.

Fri Aug 24 12:55:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-vxworks6.3.h:
        * ace/Process.cpp:
        * ace/Task.cpp:
          Fixes for building on vxworks 6.3 with diab 5.4 compiler

Fri Aug 24 11:17:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/CDR_Size.cpp:
          Added include of OS_Memory.h to get ACE_align_binary

Thu Aug 24 21:40:24 UTC 2006  Steve Huston  <shuston@riverace.com>

        * tests/Process_Manual_Event_Test.cpp (acquire_release): Fixed a race
          condition whereby while a parent and child were ping-ponging, it
          was possible for one process to signal event1, wait on event2, then
          signal event1 again before the other process could respond to
          event1 being signaled and reset it. Thus, event1 was being reset
          after the other process signaled it, ensuring a never-ending
          wait at the end of the iterations. I changed the code to quickly